--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Space+Grotesk:wght@300..700&display=swap');
+
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
+.mainTitle{
+  font-family: "Dancing Script", cursive;
+  font-weight: 700;
+  color: #F6C324;
+}
 .msg{
   animation:RandL;
   animation-duration: 4s;
@@ -30,4 +37,9 @@
   }
 
 
+}
+
+.slide1{
+  box-shadow: 2px 2px 4px  3px seashell;
+  border-radius: 30px;
 }
